--- a/_/css/style.css
+++ b/_/css/style.css
@@ -309,10 +309,10 @@ h3 {
   width: 300px;
   height: 100%;
   position: absolute;
-  background: #428bca;
   padding: 15px;
 }
 
+/* "About"-text */
 .about-section p {
 
 }
