--- a/_/css/style.css
+++ b/_/css/style.css
@@ -286,26 +286,26 @@ h3 {
      -moz-transform: translateX(0);
        -0-transform: translateX(0);
           transform: translateX(0);
-  -webkit-transition: .3s ease all;
-     -moz-transition: .3s ease all;
-       -0-transition: .3s ease all;
-          transition: .3s ease all;
+  -webkit-transition: .6s ease-in-out all;
+     -moz-transition: .6s ease-in-out all;
+       -0-transition: .6s ease-in-out all;
+          transition: .6s ease-in-out all;
   /* padding: 5% 0; /* Temp: Just spacing. */
 }
 
 /* Animation to show the about page */
 .hide-main .site-canvas {
-  -webkit-transform: translateX(300px);
-     -moz-transform: translateX(300px);
-       -0-transform: translateX(300px);
-          transform: translateX(300px);
+  -webkit-transform: translateX(100%);
+     -moz-transform: translateX(100%);
+       -0-transform: translateX(100%);
+          transform: translateX(100%);
 }
 
 /* About-section content styling */
 .about-section {
   top: 0;
-  left: -300px;
-  width: 300px;
+  left: -100%;
+  width: 100%;
   height: 100%;
   position: absolute;
   padding: 15px;
