Remove characters for prepare to wrap all lines at 80 char

--- a/_/css/style.css
+++ b/_/css/style.css
@@ -1,6 +1,6 @@
-/* ==========================================================================
+/* =========================================================================
    TABLE OF CONTENTS
-   ========================================================================== */
+   ========================================================================= */
 
 /**
  * This style sheet is divided into sections containing rules relevant to
@@ -20,9 +20,14 @@
 */
 
 
-/* ==========================================================================
+/* =========================================================================
    1. LAYOUT
-   ========================================================================== */
+   ========================================================================= */
+
+/* TODO: to Normalize, add overrides to element margins, paddings etc. from the orig. reset */
+/* Normalize: https://necolas.github.io/normalize.css/; */
+/* @import url("/bower_components/normalize-css/normalize.css"); */
+
 
 /* Apply a natural box layout model to all elements; Slightly better version from:
 https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
@@ -51,9 +56,9 @@ body {
 }
 
 
-/* ==========================================================================
+/* =========================================================================
    2. NAVIGATION
-   ========================================================================== */
+   ========================================================================= */
 
 /* ===== Main nav styles ===== */
 
@@ -76,9 +81,9 @@ a:hover {
 }
 
 
-/* ==========================================================================
+/* =========================================================================
    3. TYPOGRAPHY
-   ========================================================================== */
+   ========================================================================= */
 
 /* ===== Primary type styling ===== */
 
@@ -145,9 +150,9 @@ h3 {
 }
 
 
-/* ==========================================================================
+/* =========================================================================
    4. HEADER SVG AVATAR
-   ========================================================================== */
+   ========================================================================= */
 
 /* Div that holds the svg data <object> */
 .svg-container {
@@ -180,9 +185,9 @@ h3 {
 }
 
 
-/* ==========================================================================
+/* =========================================================================
    5. MAIN TEXT-NAVIGATION
-   ========================================================================== */
+   ========================================================================= */
 
 .main-nav {
   padding-top: 0px;
@@ -193,9 +198,9 @@ h3 {
 }
 
 
-/* ==========================================================================
+/* =========================================================================
    6. SOCIAL MEDIA ICONS
-   ========================================================================== */
+   ========================================================================= */
 
 .some-nav {
   padding-top: 10px;
@@ -231,9 +236,9 @@ h3 {
 }
 
 
-/* ==========================================================================
+/* =========================================================================
    7. OFF-CANVAS "ABOUT" -SECTION
-   ========================================================================== */
+   ========================================================================= */
 
 .site-wrapper {
   position: relative;
