--- a/_/css/style.css
+++ b/_/css/style.css
@@ -240,6 +240,9 @@ h3 {
    7. OFF-CANVAS "ABOUT" -SECTION
    ========================================================================= */
 
+/* TODO: 1) reduce DOM complexity, 3 levels really needed? 
+ * 2) try to make rwd work w/o media queries. */
+
 .site-wrapper {
   width: 100%;
   height: 100%;
