Update styling for the about-section, inc. @media-queries. Also: SCSS
Updated styling for the about section including @media-queries for type
styling on the smaller screens. ALSO: removed the vendor prefixes, and
changed to SCSS. Autoprefixer and css-minification through LibSass

--- a/_/css/style.css
+++ b/_/css/style.css
@@ -1,332 +1,2 @@
-/* =========================================================================
-   TABLE OF CONTENTS
-   ========================================================================= */
-
-/**
- * This style sheet is divided into sections containing rules relevant to
- * sections’ titles. Sections are organized like so: general styles first,
- * then by component, in order of appearance in the html.
- *
- * General style sections:
- * 1. LAYOUT - overall layout and positioning styles
- * 2. NAVIGATION - <li>-element global styles, link styles & pseudo classes
- * 3. TYPOGRAPHY - text styling and sizing, custom highlight text color
- *
- * Sections of code by component, in the order of their appearance:
- * 4. HEADER SVG AVATAR - an SVG self-portrait with a fallback
- * 5. MAIN NAV - <h1>-text navigation
- * 6. SOCIAL MEDIA ICONS - links to my profiles and social media
- * 7. OFF-CANVAS "ABOUT" -SECTION - The "About" section with off-canvas transform
-*/
-
-
-/* =========================================================================
-   1. LAYOUT
-   ========================================================================= */
-
-/* TODO: to Normalize, add overrides to element margins, paddings etc. from the orig. reset */
-/* Normalize: https://necolas.github.io/normalize.css/; */
-/* @import url("/bower_components/normalize-css/normalize.css"); */
-
-
-/* Apply a natural box layout model to all elements; Slightly better version from:
-https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
-*/
-html {
-  box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-/* for development: see every single box that make up the page */
-/* <-- clear this * to use
-* {
-  border: 1px solid red !important;
-}
-*/
-
-html {
-  font-size: 16px;
-  background-color: #fff;
-}
-
-body {
-  width: 100%;
-}
-
-
-/* =========================================================================
-   2. NAVIGATION
-   ========================================================================= */
-
-/* ===== Main nav styles ===== */
-
-li {
-  display: inline;
-}
-
-/* ===== Link styles ===== */
-
-a {
-  color: #595959;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #e84343; 
-  -webkit-transition: all 0.3s ease-out;
-     -moz-transition: all 0.3s ease-out;
-       -o-transition: all 0.3s ease-out;
-}
-
-
-/* =========================================================================
-   3. TYPOGRAPHY
-   ========================================================================= */
-
-/* ===== Primary type styling ===== */
-
-  @font-face { 
-    font-family: "BebasNeue";
-    src: url("../fonts/BebasNeue-webfont.eot");
-    src: url("../fonts/BebasNeue-webfont.eot?#iefix")     format("embedded-opentype"),
-         url("../fonts/BebasNeue-webfont.woff")           format("woff"),
-         url("../fonts/BebasNeue-webfont.ttf")            format("truetype"),
-         url("../fonts/BebasNeue-webfont.svg#BebasNeue")  format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-body {
-  font-family: "BebasNeue", Helmet, Freesans, sans-serif;
-  font-size: 1.6em;
-  color: #333;
-  text-align: center;
-  text-transform: uppercase; 
-}
-
-h1 {
-  /* needed for FitText.js */
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  text-indent: -.1em;
-  /* (end) needed for FitText.js*/
-
-  font-size: 4.06em; /* 104px */
-  line-height: .9; /* 89px */
-}
-
-h2 {
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  text-indent: -.1em;
-
-  font-size: 3.71em; /* 95px */
-  line-height: 1; /* 80px */
-}
-
-h3 {
-  display: inline-block;
-  width: 100%;
-  text-align: center;
-  text-indent: -.1em;
-
-  font-size: 2.61em; /* 67px */
-  line-height: 1; /* 63px */
-}
-
-/* ===== Custom text-selection colors ===== */
-
-::-moz-selection, {
-  text-shadow: none; 
-  background-color: #f7e5c8;
-}
-::selection {
-  text-shadow: none;
-  background-color: #fffa80;
-}
-
-
-/* =========================================================================
-   4. HEADER SVG AVATAR
-   ========================================================================= */
-
-/* Div that holds the svg data <object> */
-.svg-container {
-  position: relative;
-  display: inline-block;
-  width: 100%; /* needed to draw the svg */
-  padding-bottom: 100%;
-  margin-bottom: 20px;
-  overflow: hidden;
-  vertical-align: middle;
-}
-
-/* svg data <object> */
-#avatar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: inline-block;
-}
-
-/* png fallback of the svg header img*/
-#avatar div {
-  display: block;
-  height: auto; /* 600px; */
-  max-width: 100%;
-  margin-bottom: 20px;
-  background: center center no-repeat;
-  background-image: url("../img/avatar.png");
-  background-size: contain;
-}
-
-
-/* =========================================================================
-   5. MAIN TEXT-NAVIGATION
-   ========================================================================= */
-
-.main-nav {
-  padding-top: 0px;
-}
-
-.main-nav li {
-  margin-right: 5px;
-}
-
-
-/* =========================================================================
-   6. SOCIAL MEDIA ICONS
-   ========================================================================= */
-
-.some-nav {
-  padding-top: 10px;
-} 
-
-.some-links {
-  padding-top: 10px;
-}
-/* Hide the hyperlinked text under the icons */
-.some-links li a {
-  opacity: 0;
-}
-
-/* TODO: could the icons themselves work as links? */
-.icon {
-  display: inline-block;
-  width: 51px; /* original png size 38px */
-  height: 51px; /* TODO: Seems like this only sizes the container, not the icons. Could removing the width and height values from the icon svgs work? */
-  margin-left: 15px;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  transform: scale(1);
-  -webkit-transition: background-color .2s ease-out, transform .2s ease-out;
-     -moz-transition: all .2s ease-out;
-       -o-transition: all .2s ease-out;
-          transition: all .2s ease-out;
-       /* transition: all 300ms cubic-bezier(0.175, 0.885, 0.320, 1.275); /* easeOutBack */
-}
-
-.icon:hover, .icon:focus, .icon:active { 
-  cursor: pointer;
-  transform: scale(1.2);
-}
-
-
-/* =========================================================================
-   7. OFF-CANVAS "ABOUT" -SECTION
-   ========================================================================= */
-
-/* TODO: 1) reduce DOM complexity, 3 levels really needed? 
- * 2) Media queries to viewports over 620px -> translateX(-1000px);? */
-
-.site-wrapper {
-  width: 100%;
-  height: 100%;
-
-}
-
-.site-canvas {
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-  /* padding: 5% 0; /* Temp: Just spacing. */
-}
-
-/* Reduce main content opacity when about section revealed */
-.opacity-main {
-  opacity: 0.4;
-  transition: .8s ease-in-out all; 
-}
-
-.site-canvas-inner {
-  /* max-width: 79.86vh; /* kokosivun versio (omakuvalla)= 95vh; on 600px; */ /* TODO: RWD leiskakokeilu. Tämän määrittely ehkä osaksi SVG-objektia. Mites fallback, png on pienempi? */
-  max-width: 600px;
-  min-width: 200px;
-  min-height: 100%; /* "because in browsers other than Internet Explorer, content that is longer than the fixed height of an element just spills over the edge."? */
-  /* height: 100%; */
-  overflow: hidden;
-  margin: 0px auto; /* centers the content */
-  transition: .8s ease-in-out all; /* needed, otherwise no anim on close */
-}
-
-/* ===== About-section layout ===== */
-
-.about-section {
-  top: 0;
-  right: -600px; /* -600px; /* position it JUST outside the right edge of the screen */
-  width: 600px; /* 600px; */
-  height: 100%;
-  min-width: initial; /* this is just an override for above styles */
-  max-width: 100%; /* needed for section to scale nicely on smaller screens */
-  
-  /* position the sidebar fixed to the SCREEN, not the parent (for scroll position independence) */
-  position: fixed;
-  
-  /* if there's more stuff in "about", make sure it scrolls independently */
-  overflow: auto;
-  
-  padding: 5%; /* 5% 5% 5% 10%; */
-
-  /* this is how the sidebar moves */
-  transition: .8s ease-in-out all;
-}
-
-/* Animation to show the about page */
-.hide-main .site-canvas-inner,
-.hide-main .about-section {
-  /* move BOTH pieces of content left the same amount */
-  transform: translateX(-600px); /* (-600px); */
-}
-
-/* ===== "About"-section content styling ===== */
-
-.about-section h1 {
-  text-align: left;
-  text-indent: 0em;
-}
-
-.about-section p {
-  font-family: "Montserrat", Helmet, Freesans, sans-serif;
-  font-weight: 300;
-  font-size: 1.5rem;
-  line-height: 1.4;
-  text-align: left;
-  text-transform: initial;
-  margin-bottom: 1rem;
-}
-
-.about-section a {
-  text-decoration: underline;
-}
-
-.about-section img {
-  width: 100%;
-  min-width: 200px;
-  max-width: 1200px;
-  margin: 20px 0px;
-
-}
+html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}html{font-size:16px;background-color:#fff}body{width:100%}li{display:inline}a{color:#595959;text-decoration:none}a:hover{color:#e84343;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out}@font-face{font-family:"BebasNeue";src:url("../fonts/BebasNeue-webfont.eot");src:url("../fonts/BebasNeue-webfont.eot?#iefix") format("embedded-opentype"),url("../fonts/BebasNeue-webfont.woff") format("woff"),url("../fonts/BebasNeue-webfont.ttf") format("truetype"),url("../fonts/BebasNeue-webfont.svg#BebasNeue") format("svg");font-weight:normal;font-style:normal}body{font-family:"BebasNeue", Helmet, Freesans, sans-serif;font-size:1.6em;color:#333;text-align:center;text-transform:uppercase}h1{display:inline-block;width:100%;text-align:center;text-indent:-.1em;font-size:4.06em;line-height:.9}h2{display:inline-block;width:100%;text-align:center;text-indent:-.1em;font-size:3.71em;line-height:1}h3{display:inline-block;width:100%;text-align:center;text-indent:-.1em;font-size:2.61em;line-height:1}::-moz-selection{text-shadow:none;background-color:#fffa80}::selection{text-shadow:none;background-color:#fffa80}.svg-container{position:relative;display:inline-block;width:100%;padding-bottom:100%;margin-bottom:20px;overflow:hidden;vertical-align:middle}#avatar{position:absolute;top:0;left:0;display:inline-block}#avatar div{display:block;height:auto;max-width:100%;margin-bottom:20px;background:center center no-repeat;background-image:url("../img/avatar.png");background-size:contain}.main-nav{padding-top:0px}.main-nav li{margin-right:5px}.some-nav{padding-top:10px}.some-links{padding-top:10px}.some-links li a{opacity:0}.icon{display:inline-block;width:51px;height:51px;margin-left:15px;overflow:hidden;background-repeat:no-repeat;-webkit-transform:scale(1);transform:scale(1);-webkit-transition:background-color .2s ease-out, -webkit-transform .2s ease-out;transition:background-color .2s ease-out, -webkit-transform .2s ease-out;transition:background-color .2s ease-out, transform .2s ease-out;transition:background-color .2s ease-out, transform .2s ease-out, -webkit-transform .2s ease-out}.icon:hover,.icon:focus,.icon:active{cursor:pointer;-webkit-transform:scale(1.2);transform:scale(1.2)}.site-wrapper{width:100%;height:100%}.site-canvas{width:100%;height:100%;padding:4%}.site-canvas-inner{max-width:600px;min-width:200px;min-height:100%;overflow:hidden;margin:0px auto;-webkit-transition:.8s ease-in-out all;transition:.8s ease-in-out all}.opacity-main{opacity:0.4;-webkit-transition:.8s ease-in-out all;transition:.8s ease-in-out all}.main-toggle{position:fixed;top:0;width:100%;height:0%;-webkit-transition:.8s ease-in-out all;transition:.8s ease-in-out all}.main-toggle-enable{height:100%}.about-section{top:0;right:-600px;width:600px;height:100%;min-width:initial;max-width:100%;position:fixed;overflow:auto;padding:0 4%;-webkit-transition:.8s ease-in-out all;transition:.8s ease-in-out all}.hide-main .site-canvas-inner,.hide-main .about-section,.hide-main .main-toggle{-webkit-transform:translateX(-600px);transform:translateX(-600px);-webkit-transition:.8s ease-in-out all;transition:.8s ease-in-out all}.about-section img{width:100%;margin:20px 0px}#about-back-btn{float:left;padding:1.4em 0 .8em;background:none;border:none;outline:0;font-family:"Montserrat", Helmet, Freesans, sans-serif;font-weight:500;font-size:1.2rem;line-height:1.2;text-transform:initial;color:#a6a6a6}#about-back-btn:hover{color:#e84343;-webkit-transition:all 0.3s ease-out;transition:all 0.3s ease-out}#about-back-btn:focus{text-decoration:underline}#about-back-btn::first-letter{font-size:0}#about-back-btn:hover:first-letter{font-size:initial}@media screen and (min-width: 356px) and (max-width: 500px){#about-back-btn{font-size:1rem;padding:.8em 0}}@media screen and (min-width: 200px) and (max-width: 356px){#about-back-btn{font-size:.9rem;padding:.7em 0}}.about-section h1{text-align:left;text-indent:0em}.about-section p{font-family:"Montserrat", Helmet, Freesans, sans-serif;font-weight:300;font-size:1.3rem;line-height:1.4;text-align:left;text-transform:initial;margin-bottom:1rem}@media screen and (min-width: 356px) and (max-width: 500px){.about-section p{font-size:1.1rem}}@media screen and (min-width: 200px) and (max-width: 356px){.about-section p{font-size:.98rem}}.about-section a{text-decoration:underline}
+/*# sourceMappingURL=style.css.map */
